--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -306,6 +306,10 @@ var interfaceNamesInGlobalScope =
 // IMPORTANT: Do not change this list without review from a DOM peer!
     "DOMParser",
 // IMPORTANT: Do not change this list without review from a DOM peer!
+    "DOMPoint",
+// IMPORTANT: Do not change this list without review from a DOM peer!
+    "DOMPointReadOnly",
+// IMPORTANT: Do not change this list without review from a DOM peer!
     "DOMRect",
 // IMPORTANT: Do not change this list without review from a DOM peer!
     "DOMRectList",
