--- a/dom/base/test/mixedcontentblocker/file_mixed_content_frameNavigation_secure_grandchild.html
+++ b/dom/base/test/mixedcontentblocker/file_mixed_content_frameNavigation_secure_grandchild.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <!--
-Tests for Mixed Content Blocker - Navigating Grandchild frames when a secure parent doesn't exist
+Tests for Mixed Content Blocker - Navigating Grandchild Frames when a secure parent exists
 https://bugzilla.mozilla.org/show_bug.cgi?id=840388
 -->
 <head>
@@ -9,8 +9,8 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=840388
   <title>Tests for Mixed Content Frame Navigation</title>
 </head>
 <body>
-<iframe src="https://example.com/tests/dom/base/test/file_mixed_content_frameNavigation_innermost.html?insecurePage_navigate_grandchild" id="child"></iframe>
 
+<iframe src="https://example.com/tests/dom/base/test/mixedcontentblocker/file_mixed_content_frameNavigation_innermost.html?securePage_navigate_grandchild" id="child"></iframe>
 <script>
   // For tests that require setTimeout, set the maximum polling time to 50 x 100ms = 5 seconds.
   var MAX_COUNT = 50;
@@ -20,10 +20,11 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=840388
   var child = document.getElementById("child");
   function navigationStatus(child)
   {
+    var loc;
     // When the page is navigating, it goes through about:blank and we will get a permission denied for loc.
     // Catch that specific exception and return
     try {
-      var loc = child.contentDocument.location;
+      loc = document.getElementById("child").contentDocument.location;
     } catch(e) {
       if (e.message && e.message.indexOf("Permission denied to access property") == -1) {
         // We received an exception we didn't expect.
@@ -32,7 +33,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=840388
       counter++;
       return;
     }
-    if (loc == "http://example.com/tests/dom/base/test/file_mixed_content_frameNavigation_innermost.html?insecurePage_navigate_grandchild_response") {
+    if (loc == "http://example.com/tests/dom/base/test/mixedcontentblocker/file_mixed_content_frameNavigation_innermost.html?securePage_navigate_grandchild_response") {
       return;
     }
     else {
@@ -42,7 +43,10 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=840388
       }
       else {
         // After we have called setTimeout the maximum number of times, assume navigating the iframe is blocked
-        parent.parent.postMessage({"test": "insecurePage_navigate_grandchild", "msg": "navigating to insecure grandchild iframe blocked on insecure page"}, "http://mochi.test:8888");
+        dump("\nThe current location of the grandchild iframe is: "+loc+".\n");
+        dump("\nWe have past the maximum timeout.  Navigating a grandchild iframe from an https location to an http location on a secure page failed.  We are about to post message to the top level page\n");
+        parent.parent.postMessage({"test": "securePage_navigate_grandchild", "msg": "navigating to insecure grandchild iframe blocked on secure page"}, "http://mochi.test:8888");
+        dump("\nAttempted postMessage\n");
       }
     }
   }
