--- a/dom/media/tests/mochitest/test_peerConnection_twoAudioVideoStreams.html
+++ b/dom/media/tests/mochitest/test_peerConnection_twoAudioVideoStreams.html
@@ -1,9 +1,10 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
   <script type="application/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>
   <script type="application/javascript" src="head.js"></script>
+  <script type="application/javascript" src="mediaStreamPlayback.js"></script>
   <script type="application/javascript" src="pc.js"></script>
   <script type="application/javascript" src="templates.js"></script>
   <script type="application/javascript" src="turnConfig.js"></script>
@@ -11,15 +12,19 @@
 <body>
 <pre id="test">
 <script type="application/javascript">
+
   createHTML({
-    bug: "850275",
-    title: "Simple offer media constraint test with video/audio"
+    bug: "1091242",
+    title: "Multistream: Two audio streams, two video streams"
   });
 
-  runNetworkTest(function() {
-    var test = new PeerConnectionTest();
-    test.setMediaConstraints([], [{audio: true, video: true}]);
-    test.setOfferOptions({ offerToReceiveVideo: true, offerToReceiveAudio: true });
+  var test;
+  runNetworkTest(function (options) {
+    test = new PeerConnectionTest(options);
+    test.setMediaConstraints([{audio: true}, {video: true}, {audio: true},
+                                {video: true}],
+                             [{audio: true}, {video: true}, {audio: true},
+                                {video: true}]);
     test.run();
   });
 </script>
