Backed out 3 changesets (bug 1331696) for failing browser chrome on  toolkit/components/narrate/test/browser_narrate.js r=backout on a CLOSED TREE
Backed out changeset 4f5d0c5f191b (bug 1331696)
Backed out changeset ce87e2d2f1db (bug 1331696)
Backed out changeset e2c5f5afb6fc (bug 1331696)

--- a/dom/media/webspeech/synth/test/file_speech_queue.html
+++ b/dom/media/webspeech/synth/test/file_speech_queue.html
@@ -59,8 +59,7 @@ function testFunc(done_cb) {
       var test_data = [];
       var voices = speechSynthesis.getVoices();
       for (var voice of voices) {
-        if (voice.lang.split("-").length > 2) {
-          // Skip voices that don't automatically end with success
+        if (voice.voiceURI.indexOf('urn:moz-tts:fake-direct') < 0) {
           continue;
         }
         test_data.push([{text: "Hello world", args: { voice: voice} },
