--- a/dom/media/webspeech/synth/test/file_global_queue_pause.html
+++ b/dom/media/webspeech/synth/test/file_global_queue_pause.html
@@ -59,7 +59,8 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=1188099
       win2.speechSynthesis.pause();
 
       testSynthState(win1, { speaking: true, pending: false, paused: false});
-      testSynthState(win2, { speaking: true, pending: true, paused: true });
+      // 1188099: currently, paused state is not gaurenteed to be immediate.
+      testSynthState(win2, { speaking: true, pending: true });
 
       // We now make the utterance end.
       SpecialPowers.wrap(win1.speechSynthesis).forceEnd();
