Bug 1431758 - do not use netmonitor data to fetch stylesheets over 1MB;r=jryans
MozReview-Commit-ID: Gz6dRLiLREm

--- a/devtools/client/styleeditor/test/doc_fetch_from_netmonitor.html
+++ b/devtools/client/styleeditor/test/doc_fetch_from_netmonitor.html
@@ -4,6 +4,7 @@
   <title>Fetch from netmonitor testcase</title>
   <link rel="stylesheet" charset="UTF-8" type="text/css" media="screen" href="doc_short_string.css"/>
   <link rel="stylesheet" charset="UTF-8" type="text/css" media="screen" href="doc_long_string.css"/>
+  <link rel="stylesheet" charset="UTF-8" type="text/css" media="screen" href="doc_huge_string.css"/>
 </head>
 <body>
 	<div>Fetch from netmonitor</div>
