Bug 1423201 - Changed uses of defer to new Promise in devtools/server/tests/mochitest r=nchevobbe
Functions using 'defer' for promises are being switched to the 'new Promise' syntax. This is for changes in devtools/server/tests/mochitest.

Differential Revision: https://phabricator.services.mozilla.com/D6618

--- a/devtools/server/tests/mochitest/test_inspector-dead-nodes.html
+++ b/devtools/server/tests/mochitest/test_inspector-dead-nodes.html
@@ -24,11 +24,12 @@ let gDoc = null;
 addAsyncTest(async function() {
   const url = document.getElementById("inspectorContent").href;
 
-  const def = defer();
-  attachURL(url, function(err, client, tab, doc) {
-    def.resolve({client, tab, doc});
+  const attachURLPromise = new Promise(resolve => {
+    attachURL(url, function(err, client, tab, doc) {
+      resolve({client, tab, doc});
+    });
   });
-  const {client, tab, doc} = await def.promise;
+  const {client, tab, doc} = await attachURLPromise;
   gDoc = doc;
 
   const {InspectorFront} = require("devtools/shared/fronts/inspector");
