--- a/devtools/client/framework/toolbox-options.xhtml
+++ b/devtools/client/framework/toolbox-options.xhtml
@@ -189,6 +189,7 @@
             <span>&options.enableRemote.label3;</span>
           </label>
           <span class="options-citation-label theme-comment"
+                id="triggers-page-refresh-label"
           >&options.context.triggersPageRefresh;</span>
       </fieldset>
     </div>
