Bug 1487428 - Use target.getFront in server browser tests; r=ochameau
Differential Revision: https://phabricator.services.mozilla.com/D6768

--- a/devtools/server/tests/mochitest/test_inspector-insert.html
+++ b/devtools/server/tests/mochitest/test_inspector-insert.html
@@ -25,10 +25,12 @@ let gInspectee = null;
 
 addTest(function setup() {
   const url = document.getElementById("inspectorContent").href;
-  attachURL(url, function(err, client, tab, doc) {
+  attachURL(url, async function(err, client, tab, doc) {
     gInspectee = doc;
-    const {InspectorFront} = require("devtools/shared/fronts/inspector");
-    const inspectorFront = InspectorFront(client, tab);
+    const {TargetFactory} = require("devtools/client/framework/target");
+    const target = await TargetFactory.forTab(tab);
+    await target.attach();
+    const inspectorFront = target.getFront("inspector");
     promiseDone(inspectorFront.getWalker().then(walker => {
       ok(walker, "getWalker() should return an actor.");
       gWalker = walker;
